[gd_scene load_steps=2 format=3 uid="uid://d2b7yr2venhak"]

[ext_resource type="Script" uid="uid://ddjr10vmhhb2x" path="res://UI/UpgradeMenu.gd" id="1_cqinb"]

[node name="UpgradeMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cqinb")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(480, 320)
layout_mode = 0
offset_left = 777.0
offset_top = 364.0
offset_right = 1257.0
offset_bottom = 684.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 54.0
offset_top = 59.0
offset_right = 420.53
offset_bottom = 227.11
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Upgrade Masks"
horizontal_alignment = 1

[node name="Speed" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="SpeedNameLabel" type="Label" parent="Panel/VBox/Speed"]
layout_mode = 2
size_flags_horizontal = 0
text = "Speed"

[node name="SpeedInfoLabel" type="Label" parent="Panel/VBox/Speed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level: 0 | Cost: 0"

[node name="SpeedButton" type="Button" parent="Panel/VBox/Speed"]
layout_mode = 2
focus_mode = 0
text = "Upgrade"

[node name="Invisibility" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="InvisNameLabel" type="Label" parent="Panel/VBox/Invisibility"]
layout_mode = 2
size_flags_horizontal = 8
text = "Invisibility"

[node name="InvisInfoLabel" type="Label" parent="Panel/VBox/Invisibility"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level: 0 | Cost: 0"

[node name="InvisButton" type="Button" parent="Panel/VBox/Invisibility"]
layout_mode = 2
focus_mode = 0
text = "Upgrade"

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
focus_mode = 0
text = "Close"
